# MIT-Archive

./: .gitignore  README.md  WORKING_RAG_AGENETIC_FOR_SEPS.json  Webhook_Trigger_for_SEPS_with_RAG_context.json
MIT-003 - technology and project management/: Chat_SEPS_using_RAG_context.json  RAG_ingest_for_listening_on_Google_Drive.json  docker-compose.yml  mits-004-notes-1.txt  mits-004-notes-2.txt  mits-004-notes-3.txt
MITS-001 - machine learning/Audio Processors/: readme.md
MITS-001 - machine learning/Audio Processors/OpenAI Whisper Speech-to-Text/: readme.md  requirements.txt  test.py
MITS-001 - machine learning/Audio Processors/Sample Basic Text to Speech Implementation/: requirements.txt  test.py
MITS-001 - machine learning/phcodeswitch-ceb-dvo/: .gitignore  ASR_TRAINING_GUIDE.md  CITATION.cff  CONSENT_CHECKLIST.md  CONTRIBUTING.md  DATA_LICENSE.md  DISCLAIMER.md  PRIVACY_AND_COMPLIANCE.md  README.md  Voice_Recording_Transcript_Consent_Form.docx  asr_minimum_test_cases_tl.txt  audio_data_creator.py  audio_data_creator_cebuano.py  main.py  pyproject.toml  requirements.txt  test_asr_model.py  train_asr_model.py
MITS-001 - machine learning/phcodeswitch-ceb-dvo/asr_test_results/: asr_test_round_20260430_181743.csv  asr_test_rounds_summary.csv
MITS-001 - machine learning/phcodeswitch-ceb-dvo/scripts/: inspect_consent_doc.py  rewrite_consent_doc.py
MITS-002 - data mining/: readme.md
MITS-002 - data mining/classification/knn/: config.py  ham.py  main.py  optimal-k.md  requirements.txt  result.py  spam.py  text-to-vector.md
