[project]
name = "phcodeswitch-ceb-dvo-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "ffmpeg>=1.4",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.5.1",
    "torchcodec>=0.11.1",
    "torchvision>=0.20.1",
    "transformers>=5.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
